fpac (4.1.0)
	* Change the way we install conf files in /etc/ax25. Install the 
	defaults, if they don't already exist. If they do exist, install 
	them with a .dist extension, so we don't clobber existing files. The 
	"make installconf" target is no longer required to install config
	files.
	* Remove the dependency on the SVNREV file, we're not currently using
	that.

 -- Lee Woldanski <ve7fet@tparc.org> Sun, 03 Feb 2019 10:45:00 -0800

fpac (4.00.00)
	* Released as version 4.00.00 due to significant changes. Based on 
	  3.27.19 working code (un-released). Compatibility with versions <3.27.18 
	  is not guaranteed
	* Cleaned up the SVN code base
	* Moved the help files from /etc/ax25/fpac/help to /var/ax25/fpac/help 
	  for better policy compliance and less security risk
	* Added some of K4GBB's scripts: ax25, ax25-up, ax25-down, ax25parms
	* Remove the obsolete mkissattach code (and kiss folder)
	* K4GBB added a buch of man pages for the binaries created by this software
	* Commented some more of the source
	* F6BVP repaired the -o option and added -d (debug) option in mon_tcp
	* F6BVP added a usage message to call_tcp
	* F6BVP added more usage details to wpserv and have wpserv and wplist print full callsign 
	  including -0 SSID
	* F6BVP fixed 32/64 bit compatability for libwp and computing of wp record age based on GMT
	* F6BVP white pages records are now stored with GMT time to prevent timezone problems on
	  large systems spanning many timezones
	* F6BVP added more error reporting to wpedit
	* F6BVP cleaned up some of the debugging messages in fpacwpd
	* F6BVP added a patch to wpedit to allow editing of a record despite age/date
	* K4GBB cleaned up the output of the fpaccfg utility
	* F6BVP fixed wpedit and wpmaint utilities to better handle old records
	* Shortened times that stale whitepages records are held before being discarded
	* F6BVP improved the whitepages exchanges between nodes to speed up and reduce overhead