@@ -1,34 +1,0 @@
-/*From FPAC sources*/
-
-#define FPACCONF        	AX25_SYSCONFDIR"fpac.conf"
-#define FPACNODES       	AX25_SYSCONFDIR"fpac.nodes"
-#define FPACROUTES      	AX25_SYSCONFDIR"fpac.routes"
-#define FPACDNIC        	AX25_SYSCONFDIR"fpac.dnic"
-#define FPAC_INFO_FILE  	AX25_SYSCONFDIR"fpac.info"
-#define FPAC_HELLO_FILE 	AX25_SYSCONFDIR"fpac.hello"
-#define FPAC_HELP_DIR   	AX25_LOCALSTATEDIR"fpac/help/"
-#define FPACWP 			AX25_LOCALSTATEDIR"fpac/fpacwp3.dat"
-
-#define FLEX_GT_FILE  		AX25_LOCALSTATEDIR"flex/gateways"
-#define FLEX_DST_FILE 		AX25_LOCALSTATEDIR"flex/destinations"
-
-#define DATA_MHEARD_FILE        AX25_LOCALSTATEDIR"mheard/mheard.dat"
-
-#define DATA_NODE_LOGIN_FILE	AX25_LOCALSTATEDIR"fpac/loggedin"
-
-#define FLEXD_CONF_FILE 	AX25_SYSCONFDIR"flexd.conf"
-#define FLEXD_TEMP_PATH 	AX25_LOCALSTATEDIR"flex/"
-#define AX_ROUTES_FILE 		AX25_SYSCONFDIR"flexd.routes"
-
-#define CONF_RSPORTS_FILE 	AX25_SYSCONFDIR"rsports"
-
-#define CONF_AXPORTS_FILE       AX25_SYSCONFDIR"axports"
-
-#define CONF_APRSLIST_FILE 	AX25_SYSCONFDIR"aprslist.conf"
-#define DATA_APRSLIST_FILE 	AX25_LOCALSTATEDIR"aprs.dat"
-
-#define STATLCK 		AX25_LOCALSTATEDIR"fpac/fpacstat.lck"
-#define STATDAT 		AX25_LOCALSTATEDIR"fpac/fpacstat.dat"
-#define STATDAY 		AX25_LOCALSTATEDIR"fpac/fpacstat.day"
-#define STATPID 		AX25_LOCALSTATEDIR"fpac/fpacstat.pid"
-
